core/parser/oRatioParser.cpp

// Generated from oRatio.g4 by ANTLR 4.5.3


#include "oRatioListener.h"
#include "oRatioVisitor.h"

#include "oRatioParser.h"


using namespace antlrcpp;
using namespace oratio;
using namespace antlr4;

oRatioParser::oRatioParser(TokenStream *input) : Parser(input) {
    _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

oRatioParser::~oRatioParser() {
    delete _interpreter;
}

std::string oRatioParser::getGrammarFileName() const {
    return "oRatio.g4";
}

const std::vector<std::string>& oRatioParser::getRuleNames() const {
    return _ruleNames;
}

dfa::Vocabulary& oRatioParser::getVocabulary() const {
    return _vocabulary;
}


//----------------- Compilation_unitContext ------------------------------------------------------------------

oRatioParser::Compilation_unitContext::Compilation_unitContext(ParserRuleContext *parent, size_t invokingState)
: ParserRuleContext(parent, invokingState) { }

tree::TerminalNode* oRatioParser::Compilation_unitContext::EOF() {
    return getToken(oRatioParser::EOF, 0);
}

std::vector<oRatioParser::Type_declarationContext *> oRatioParser::Compilation_unitContext::type_declaration() {
    return getRuleContexts<oRatioParser::Type_declarationContext>();
}

oRatioParser::Type_declarationContext* oRatioParser::Compilation_unitContext::type_declaration(size_t i) {
    return getRuleContext<oRatioParser::Type_declarationContext>(i);
}

std::vector<oRatioParser::Method_declarationContext *> oRatioParser::Compilation_unitContext::method_declaration() {
    return getRuleContexts<oRatioParser::Method_declarationContext>();
}

oRatioParser::Method_declarationContext* oRatioParser::Compilation_unitContext::method_declaration(size_t i) {
    return getRuleContext<oRatioParser::Method_declarationContext>(i);
}

std::vector<oRatioParser::Predicate_declarationContext *> oRatioParser::Compilation_unitContext::predicate_declaration() {
    return getRuleContexts<oRatioParser::Predicate_declarationContext>();
}

oRatioParser::Predicate_declarationContext* oRatioParser::Compilation_unitContext::predicate_declaration(size_t i) {
    return getRuleContext<oRatioParser::Predicate_declarationContext>(i);
}

std::vector<oRatioParser::StatementContext *> oRatioParser::Compilation_unitContext::statement() {
    return getRuleContexts<oRatioParser::StatementContext>();
}

oRatioParser::StatementContext* oRatioParser::Compilation_unitContext::statement(size_t i) {
    return getRuleContext<oRatioParser::StatementContext>(i);
}

size_t oRatioParser::Compilation_unitContext::getRuleIndex() const {
    return oRatioParser::RuleCompilation_unit;
}

void oRatioParser::Compilation_unitContext::enterRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<oRatioListener *> (listener);
    if (parserListener != nullptr)
        parserListener->enterCompilation_unit(this);
}

void oRatioParser::Compilation_unitContext::exitRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<oRatioListener *> (listener);
    if (parserListener != nullptr)
        parserListener->exitCompilation_unit(this);
}

antlrcpp::Any oRatioParser::Compilation_unitContext::accept(tree::ParseTreeVisitor *visitor) {
    if (dynamic_cast<oRatioVisitor*> (visitor) != nullptr)
        return ((oRatioVisitor *) visitor)->visitCompilation_unit(this);
    else
        return visitor->visitChildren(this);
}

oRatioParser::Compilation_unitContext* oRatioParser::compilation_unit() {
    Compilation_unitContext *_localctx = _tracker.createInstance<Compilation_unitContext>(_ctx, getState());
    enterRule(_localctx, 0, oRatioParser::RuleCompilation_unit);
    size_t _la = 0;

    auto onExit = finally([ = ]{
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(72);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while ((((_la & ~0x3fULL) == 0) &&
                ((1ULL << _la) & ((1ULL << oRatioParser::TYPE_DEF)
                | (1ULL << oRatioParser::REAL)
                | (1ULL << oRatioParser::BOOL)
                | (1ULL << oRatioParser::STRING)
                | (1ULL << oRatioParser::ENUM)
                | (1ULL << oRatioParser::CLASS)
                | (1ULL << oRatioParser::GOAL)
                | (1ULL << oRatioParser::FACT)
                | (1ULL << oRatioParser::PREDICATE)
                | (1ULL << oRatioParser::NEW)
                | (1ULL << oRatioParser::THIS)
                | (1ULL << oRatioParser::VOID)
                | (1ULL << oRatioParser::TRUE)
                | (1ULL << oRatioParser::FALSE)
                | (1ULL << oRatioParser::RETURN)
                | (1ULL << oRatioParser::LPAREN)
                | (1ULL << oRatioParser::LBRACKET)
                | (1ULL << oRatioParser::LBRACE)
                | (1ULL << oRatioParser::PLUS)
                | (1ULL << oRatioParser::MINUS)
                | (1ULL << oRatioParser::BANG)
                | (1ULL << oRatioParser::ID)
                | (1ULL << oRatioParser::NumericLiteral)
                | (1ULL << oRatioParser::StringLiteral))) != 0)) {
            setState(70);
            _errHandler->sync(this);
            switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
                case 1:
                {
                    setState(66);
                    type_declaration();
                    break;
                }

                case 2:
                {
                    setState(67);
                    method_declaration();
                    break;
                }

                case 3:
                {
                    setState(68);
                    predicate_declaration();
                    break;
                }

                case 4:
                {
                    setState(69);
                    statement();
                    break;
                }

            }
            setState(74);
            _errHandler->sync(this);
            _la = _input->LA(1);
        }
        setState(75);
        match(oRatioParser::EOF);

    } catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- Type_declarationContext ------------------------------------------------------------------

oRatioParser::Type_declarationContext::Type_declarationContext(ParserRuleContext *parent, size_t invokingState)
: ParserRuleContext(parent, invokingState) { }

oRatioParser::Typedef_declarationContext* oRatioParser::Type_declarationContext::typedef_declaration() {
    return getRuleContext<oRatioParser::Typedef_declarationContext>(0);
}

oRatioParser::Enum_declarationContext* oRatioParser::Type_declarationContext::enum_declaration() {
    return getRuleContext<oRatioParser::Enum_declarationContext>(0);
}

oRatioParser::Class_declarationContext* oRatioParser::Type_declarationContext::class_declaration() {
    return getRuleContext<oRatioParser::Class_declarationContext>(0);
}

size_t oRatioParser::Type_declarationContext::getRuleIndex() const {
    return oRatioParser::RuleType_declaration;
}

void oRatioParser::Type_declarationContext::enterRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<oRatioListener *> (listener);
    if (parserListener != nullptr)
        parserListener->enterType_declaration(this);
}

void oRatioParser::Type_declarationContext::exitRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<oRatioListener *> (listener);
    if (parserListener != nullptr)
        parserListener->exitType_declaration(this);
}

antlrcpp::Any oRatioParser::Type_declarationContext::accept(tree::ParseTreeVisitor *visitor) {
    if (dynamic_cast<oRatioVisitor*> (visitor) != nullptr)
        return ((oRatioVisitor *) visitor)->visitType_declaration(this);
    else
        return visitor->visitChildren(this);
}

oRatioParser::Type_declarationContext* oRatioParser::type_declaration() {
    Type_declarationContext *_localctx = _tracker.createInstance<Type_declarationContext>(_ctx, getState());
    enterRule(_localctx, 2, oRatioParser::RuleType_declaration);

    auto onExit = finally([ = ]{
        exitRule();
    });
    try {
        setState(80);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
            case oRatioParser::TYPE_DEF:
            {
                enterOuterAlt(_localctx, 1);
                setState(77);
                typedef_declaration();
                break;
            }

            case oRatioParser::ENUM:
            {
                enterOuterAlt(_localctx, 2);
                setState(78);
                enum_declaration();
                break;
            }

            case oRatioParser::CLASS:
            {
                enterOuterAlt(_localctx, 3);
                setState(79);
                class_declaration();
                break;
            }

            default:
                throw NoViableAltException(this);
        }

    } catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- Typedef_declarationContext ------------------------------------------------------------------

oRatioParser::Typedef_declarationContext::Typedef_declarationContext(ParserRuleContext *parent, size_t invokingState)
: ParserRuleContext(parent, invokingState) { }

oRatioParser::Primitive_typeContext* oRatioParser::Typedef_declarationContext::primitive_type() {
    return getRuleContext<oRatioParser::Primitive_typeContext>(0);
}

oRatioParser::ExprContext* oRatioParser::Typedef_declarationContext::expr() {
    return getRuleContext<oRatioParser::ExprContext>(0);
}

tree::TerminalNode* oRatioParser::Typedef_declarationContext::ID() {
    return getToken(oRatioParser::ID, 0);
}

size_t oRatioParser::Typedef_declarationContext::getRuleIndex() const {
    return oRatioParser::RuleTypedef_declaration;
}

void oRatioParser::Typedef_declarationContext::enterRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<oRatioListener *> (listener);
    if (parserListener != nullptr)
        parserListener->enterTypedef_declaration(this);
}

void oRatioParser::Typedef_declarationContext::exitRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<oRatioListener *> (listener);
    if (parserListener != nullptr)
        parserListener->exitTypedef_declaration(this);
}

antlrcpp::Any oRatioParser::Typedef_declarationContext::accept(tree::ParseTreeVisitor *visitor) {
    if (dynamic_cast<oRatioVisitor*> (visitor) != nullptr)
        return ((oRatioVisitor *) visitor)->visitTypedef_declaration(this);
    else
        return visitor->visitChildren(this);
}

oRatioParser::Typedef_declarationContext* oRatioParser::typedef_declaration() {
    Typedef_declarationContext *_localctx = _tracker.createInstance<Typedef_declarationContext>(_ctx, getState());
    enterRule(_localctx, 4, oRatioParser::RuleTypedef_declaration);

    auto onExit = finally([ = ]{
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(82);
        match(oRatioParser::TYPE_DEF);
        setState(83);
        primitive_type();
        setState(84);
        expr(0);
        setState(85);
        dynamic_cast<Typedef_declarationContext *> (_localctx)->name = match(oRatioParser::ID);
        setState(86);
        match(oRatioParser::SEMICOLON);

    } catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- Enum_declarationContext ------------------------------------------------------------------

oRatioParser::Enum_declarationContext::Enum_declarationContext(ParserRuleContext *parent, size_t invokingState)
: ParserRuleContext(parent, invokingState) { }

std::vector<oRatioParser::Enum_constantsContext *> oRatioParser::Enum_declarationContext::enum_constants() {
    return getRuleContexts<oRatioParser::Enum_constantsContext>();
}

oRatioParser::Enum_constantsContext* oRatioParser::Enum_declarationContext::enum_constants(size_t i) {
    return getRuleContext<oRatioParser::Enum_constantsContext>(i);
}

tree::TerminalNode* oRatioParser::Enum_declarationContext::ID() {
    return getToken(oRatioParser::ID, 0);
}

size_t oRatioParser::Enum_declarationContext::getRuleIndex() const {
    return oRatioParser::RuleEnum_declaration;
}

void oRatioParser::Enum_declarationContext::enterRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<oRatioListener *> (listener);
    if (parserListener != nullptr)
        parserListener->enterEnum_declaration(this);
}

void oRatioParser::Enum_declarationContext::exitRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<oRatioListener *> (listener);
    if (parserListener != nullptr)
        parserListener->exitEnum_declaration(this);
}

antlrcpp::Any oRatioParser::Enum_declarationContext::accept(tree::ParseTreeVisitor *visitor) {
    if (dynamic_cast<oRatioVisitor*> (visitor) != nullptr)
        return ((oRatioVisitor *) visitor)->visitEnum_declaration(this);
    else
        return visitor->visitChildren(this);
}

oRatioParser::Enum_declarationContext* oRatioParser::enum_declaration() {
    Enum_declarationContext *_localctx = _tracker.createInstance<Enum_declarationContext>(_ctx, getState());
    enterRule(_localctx, 6, oRatioParser::RuleEnum_declaration);
    size_t _la = 0;

    auto onExit = finally([ = ]{
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(88);
        match(oRatioParser::ENUM);
        setState(89);
        dynamic_cast<Enum_declarationContext *> (_localctx)->name = match(oRatioParser::ID);
        setState(90);
        enum_constants();
        setState(95);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == oRatioParser::BAR) {
            setState(91);
            match(oRatioParser::BAR);
            setState(92);
            enum_constants();
            setState(97);
            _errHandler->sync(this);
            _la = _input->LA(1);
        }
        setState(98);
        match(oRatioParser::SEMICOLON);

    } catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- Enum_constantsContext ------------------------------------------------------------------

oRatioParser::Enum_constantsContext::Enum_constantsContext(ParserRuleContext *parent, size_t invokingState)
: ParserRuleContext(parent, invokingState) { }

std::vector<tree::TerminalNode *> oRatioParser::Enum_constantsContext::StringLiteral() {
    return getTokens(oRatioParser::StringLiteral);
}

tree::TerminalNode* oRatioParser::Enum_constantsContext::StringLiteral(size_t i) {
    return getToken(oRatioParser::StringLiteral, i);
}

oRatioParser::TypeContext* oRatioParser::Enum_constantsContext::type() {
    return getRuleContext<oRatioParser::TypeContext>(0);
}

size_t oRatioParser::Enum_constantsContext::getRuleIndex() const {
    return oRatioParser::RuleEnum_constants;
}

void oRatioParser::Enum_constantsContext::enterRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<oRatioListener *> (listener);
    if (parserListener != nullptr)
        parserListener->enterEnum_constants(this);
}

void oRatioParser::Enum_constantsContext::exitRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<oRatioListener *> (listener);
    if (parserListener != nullptr)
        parserListener->exitEnum_constants(this);
}

antlrcpp::Any oRatioParser::Enum_constantsContext::accept(tree::ParseTreeVisitor *visitor) {
    if (dynamic_cast<oRatioVisitor*> (visitor) != nullptr)
        return ((oRatioVisitor *) visitor)->visitEnum_constants(this);
    else
        return visitor->visitChildren(this);
}

oRatioParser::Enum_constantsContext* oRatioParser::enum_constants() {
    Enum_constantsContext *_localctx = _tracker.createInstance<Enum_constantsContext>(_ctx, getState());
    enterRule(_localctx, 8, oRatioParser::RuleEnum_constants);
    size_t _la = 0;

    auto onExit = finally([ = ]{
        exitRule();
    });
    try {
        setState(111);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
            case oRatioParser::LBRACE:
            {
                enterOuterAlt(_localctx, 1);
                setState(100);
                match(oRatioParser::LBRACE);
                setState(101);
                match(oRatioParser::StringLiteral);
                setState(106);
                _errHandler->sync(this);
                _la = _input->LA(1);
                while (_la == oRatioParser::COMMA) {
                    setState(102);
                    match(oRatioParser::COMMA);
                    setState(103);
                    match(oRatioParser::StringLiteral);
                    setState(108);
                    _errHandler->sync(this);
                    _la = _input->LA(1);
                }
                setState(109);
                match(oRatioParser::RBRACE);
                break;
            }

            case oRatioParser::REAL:
            case oRatioParser::BOOL:
            case oRatioParser::STRING:
            case oRatioParser::ID:
            {
                enterOuterAlt(_localctx, 2);
                setState(110);
                type();
                break;
            }

            default:
                throw NoViableAltException(this);
        }

    } catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- Class_declarationContext ------------------------------------------------------------------

oRatioParser::Class_declarationContext::Class_declarationContext(ParserRuleContext *parent, size_t invokingState)
: ParserRuleContext(parent, invokingState) { }

tree::TerminalNode* oRatioParser::Class_declarationContext::ID() {
    return getToken(oRatioParser::ID, 0);
}

oRatioParser::Type_listContext* oRatioParser::Class_declarationContext::type_list() {
    return getRuleContext<oRatioParser::Type_listContext>(0);
}

std::vector<oRatioParser::MemberContext *> oRatioParser::Class_declarationContext::member() {
    return getRuleContexts<oRatioParser::MemberContext>();
}

oRatioParser::MemberContext* oRatioParser::Class_declarationContext::member(size_t i) {
    return getRuleContext<oRatioParser::MemberContext>(i);
}

size_t oRatioParser::Class_declarationContext::getRuleIndex() const {
    return oRatioParser::RuleClass_declaration;
}

void oRatioParser::Class_declarationContext::enterRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<oRatioListener *> (listener);
    if (parserListener != nullptr)
        parserListener->enterClass_declaration(this);
}

void oRatioParser::Class_declarationContext::exitRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<oRatioListener *> (listener);
    if (parserListener != nullptr)
        parserListener->exitClass_declaration(this);
}

antlrcpp::Any oRatioParser::Class_declarationContext::accept(tree::ParseTreeVisitor *visitor) {
    if (dynamic_cast<oRatioVisitor*> (visitor) != nullptr)
        return ((oRatioVisitor *) visitor)->visitClass_declaration(this);
    else
        return visitor->visitChildren(this);
}

oRatioParser::Class_declarationContext* oRatioParser::class_declaration() {
    Class_declarationContext *_localctx = _tracker.createInstance<Class_declarationContext>(_ctx, getState());
    enterRule(_localctx, 10, oRatioParser::RuleClass_declaration);
    size_t _la = 0;

    auto onExit = finally([ = ]{
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(113);
        match(oRatioParser::CLASS);
        setState(114);
        dynamic_cast<Class_declarationContext *> (_localctx)->name = match(oRatioParser::ID);
        setState(117);

        _la = _input->LA(1);
        if (_la == oRatioParser::COLON) {
            setState(115);
            match(oRatioParser::COLON);
            setState(116);
            type_list();
        }
        setState(119);
        match(oRatioParser::LBRACE);
        setState(123);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while ((((_la & ~0x3fULL) == 0) &&
                ((1ULL << _la) & ((1ULL << oRatioParser::TYPE_DEF)
                | (1ULL << oRatioParser::REAL)
                | (1ULL << oRatioParser::BOOL)
                | (1ULL << oRatioParser::STRING)
                | (1ULL << oRatioParser::ENUM)
                | (1ULL << oRatioParser::CLASS)
                | (1ULL << oRatioParser::PREDICATE)
                | (1ULL << oRatioParser::VOID)
                | (1ULL << oRatioParser::ID))) != 0)) {
            setState(120);
            member();
            setState(125);
            _errHandler->sync(this);
            _la = _input->LA(1);
        }
        setState(126);
        match(oRatioParser::RBRACE);

    } catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- MemberContext ------------------------------------------------------------------

oRatioParser::MemberContext::MemberContext(ParserRuleContext *parent, size_t invokingState)
: ParserRuleContext(parent, invokingState) { }

oRatioParser::Field_declarationContext* oRatioParser::MemberContext::field_declaration() {
    return getRuleContext<oRatioParser::Field_declarationContext>(0);
}

oRatioParser::Method_declarationContext* oRatioParser::MemberContext::method_declaration() {
    return getRuleContext<oRatioParser::Method_declarationContext>(0);
}

oRatioParser::Constructor_declarationContext* oRatioParser::MemberContext::constructor_declaration() {
    return getRuleContext<oRatioParser::Constructor_declarationContext>(0);
}

oRatioParser::Predicate_declarationContext* oRatioParser::MemberContext::predicate_declaration() {
    return getRuleContext<oRatioParser::Predicate_declarationContext>(0);
}

oRatioParser::Type_declarationContext* oRatioParser::MemberContext::type_declaration() {
    return getRuleContext<oRatioParser::Type_declarationContext>(0);
}

size_t oRatioParser::MemberContext::getRuleIndex() const {
    return oRatioParser::RuleMember;
}

void oRatioParser::MemberContext::enterRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<oRatioListener *> (listener);
    if (parserListener != nullptr)
        parserListener->enterMember(this);
}

void oRatioParser::MemberContext::exitRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<oRatioListener *> (listener);
    if (parserListener != nullptr)
        parserListener->exitMember(this);
}

antlrcpp::Any oRatioParser::MemberContext::accept(tree::ParseTreeVisitor *visitor) {
    if (dynamic_cast<oRatioVisitor*> (visitor) != nullptr)
        return ((oRatioVisitor *) visitor)->visitMember(this);
    else
        return visitor->visitChildren(this);
}

oRatioParser::MemberContext* oRatioParser::member() {
    MemberContext *_localctx = _tracker.createInstance<MemberContext>(_ctx, getState());
    enterRule(_localctx, 12, oRatioParser::RuleMember);

    auto onExit = finally([ = ]{
        exitRule();
    });
    try {
        setState(133);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
            case 1:
            {
                enterOuterAlt(_localctx, 1);
                setState(128);
                field_declaration();
                break;
            }

            case 2:
            {
                enterOuterAlt(_localctx, 2);
                setState(129);
                method_declaration();
                break;
            }

            case 3:
            {
                enterOuterAlt(_localctx, 3);
                setState(130);
                constructor_declaration();
                break;
            }

            case 4:
            {
                enterOuterAlt(_localctx, 4);
                setState(131);
                predicate_declaration();
                break;
            }

            case 5:
            {
                enterOuterAlt(_localctx, 5);
                setState(132);
                type_declaration();
                break;
            }

        }

    } catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- Field_declarationContext ------------------------------------------------------------------

oRatioParser::Field_declarationContext::Field_declarationContext(ParserRuleContext *parent, size_t invokingState)
: ParserRuleContext(parent, invokingState) { }

oRatioParser::TypeContext* oRatioParser::Field_declarationContext::type() {
    return getRuleContext<oRatioParser::TypeContext>(0);
}

std::vector<oRatioParser::Variable_decContext *> oRatioParser::Field_declarationContext::variable_dec() {
    return getRuleContexts<oRatioParser::Variable_decContext>();
}

oRatioParser::Variable_decContext* oRatioParser::Field_declarationContext::variable_dec(size_t i) {
    return getRuleContext<oRatioParser::Variable_decContext>(i);
}

size_t oRatioParser::Field_declarationContext::getRuleIndex() const {
    return oRatioParser::RuleField_declaration;
}

void oRatioParser::Field_declarationContext::enterRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<oRatioListener *> (listener);
    if (parserListener != nullptr)
        parserListener->enterField_declaration(this);
}

void oRatioParser::Field_declarationContext::exitRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<oRatioListener *> (listener);
    if (parserListener != nullptr)
        parserListener->exitField_declaration(this);
}

antlrcpp::Any oRatioParser::Field_declarationContext::accept(tree::ParseTreeVisitor *visitor) {
    if (dynamic_cast<oRatioVisitor*> (visitor) != nullptr)
        return ((oRatioVisitor *) visitor)->visitField_declaration(this);
    else
        return visitor->visitChildren(this);
}

oRatioParser::Field_declarationContext* oRatioParser::field_declaration() {
    Field_declarationContext *_localctx = _tracker.createInstance<Field_declarationContext>(_ctx, getState());
    enterRule(_localctx, 14, oRatioParser::RuleField_declaration);
    size_t _la = 0;

    auto onExit = finally([ = ]{
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(135);
        type();
        setState(136);
        variable_dec();
        setState(141);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == oRatioParser::COMMA) {
            setState(137);
            match(oRatioParser::COMMA);
            setState(138);
            variable_dec();
            setState(143);
            _errHandler->sync(this);
            _la = _input->LA(1);
        }
        setState(144);
        match(oRatioParser::SEMICOLON);

    } catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- Variable_decContext ------------------------------------------------------------------

oRatioParser::Variable_decContext::Variable_decContext(ParserRuleContext *parent, size_t invokingState)
: ParserRuleContext(parent, invokingState) { }

tree::TerminalNode* oRatioParser::Variable_decContext::ID() {
    return getToken(oRatioParser::ID, 0);
}

oRatioParser::ExprContext* oRatioParser::Variable_decContext::expr() {
    return getRuleContext<oRatioParser::ExprContext>(0);
}

size_t oRatioParser::Variable_decContext::getRuleIndex() const {
    return oRatioParser::RuleVariable_dec;
}

void oRatioParser::Variable_decContext::enterRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<oRatioListener *> (listener);
    if (parserListener != nullptr)
        parserListener->enterVariable_dec(this);
}

void oRatioParser::Variable_decContext::exitRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<oRatioListener *> (listener);
    if (parserListener != nullptr)
        parserListener->exitVariable_dec(this);
}

antlrcpp::Any oRatioParser::Variable_decContext::accept(tree::ParseTreeVisitor *visitor) {
    if (dynamic_cast<oRatioVisitor*> (visitor) != nullptr)
        return ((oRatioVisitor *) visitor)->visitVariable_dec(this);
    else
        return visitor->visitChildren(this);
}

oRatioParser::Variable_decContext* oRatioParser::variable_dec() {
    Variable_decContext *_localctx = _tracker.createInstance<Variable_decContext>(_ctx, getState());
    enterRule(_localctx, 16, oRatioParser::RuleVariable_dec);
    size_t _la = 0;

    auto onExit = finally([ = ]{
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(146);
        dynamic_cast<Variable_decContext *> (_localctx)->name = match(oRatioParser::ID);
        setState(149);

        _la = _input->LA(1);
        if (_la == oRatioParser::EQUAL) {
            setState(147);
            match(oRatioParser::EQUAL);
            setState(148);
            expr(0);
        }

    } catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- Method_declarationContext ------------------------------------------------------------------

oRatioParser::Method_declarationContext::Method_declarationContext(ParserRuleContext *parent, size_t invokingState)
: ParserRuleContext(parent, invokingState) { }

size_t oRatioParser::Method_declarationContext::getRuleIndex() const {
    return oRatioParser::RuleMethod_declaration;
}

void oRatioParser::Method_declarationContext::copyFrom(Method_declarationContext *ctx) {
    ParserRuleContext::copyFrom(ctx);
}
